awsscripts/aws projects/create_vpc.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "Create VPC A, VPC B and VPC C each with an IGW, NATGW and public and private subnets in 2AZs using 10.0.0.0/16, 10.1.0.0/16 and 10.2.0.0/16"

Metadata:
  "AWS::CloudFormation::Interface":
    ParameterGroups:
      - Label:
          default: "VPC Parameters"
        Parameters:
          - AvailabilityZoneA
          - AvailabilityZoneB

Parameters:
  AvailabilityZoneA:
    Description: Availability Zone 1
    Type: AWS::EC2::AvailabilityZone::Name
    Default: us-east-1a
  AvailabilityZoneB:
    Description: Availability Zone 2
    Type: AWS::EC2::AvailabilityZone::Name
    Default: us-east-1b
  AMI:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Description: 'The ID of the AMI.'
    Default: /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64

Resources:
  # VPC A Resources
  VpcA:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      InstanceTenancy:default
     Tags:
     -Key :Name
      Value :"VPC_A"

  VpcAPublicSubnet1:
    Type: AWS::EC2::Subnet
    DependsOn:
      - VpcA
    Properties:
      VpcId: !Ref AvailabilityZoneA
      CidrBlock: "10.0.0.0/24"
      MapPublicIpOnLaunch: true
      Tags:
      -Key :Name
      Value :"VPC_A_Public_Subnet_1"
      VpcId:!Ref VpcA

  VpcAPublicSubnet2:
    Type: AWS::EC2::Subnet
    DependsOn:
      - VpcA
    Properties:
      VpcId: !Ref AvailabilityZoneB
      CidrBlock: "10.0.1.0/24"
      MapPublicIpOnLaunch: true
      Tags:
      -Key :Name
      Value :"VPC_A_Public_Subnet_2"
      VpcId:!Ref VpcA

      VpcAPublicSubnetRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: VpcA
    Properties:
      VpcId: !Ref VpcA
      Tags: 
      - Key: :Name
        Value: "VPC_A_Public_Subnet_Route_Table"

      VpcAPublicSubnetRouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      DependsOn: VpcAPublicSubnetRouteTable
      Properties:
        SubnetId: !Ref VpcAPublicSubnet1
        RouteTableId: !Ref VpcAPublicSubnetRouteTable

      VpcAPublicSubnetRouteTableAssociation2:
      Type: AWS::EC2::SubnetRouteTableAssociation
      DependsOn: VpcAPublicSubnetRouteTable
      Properties:
        SubnetId: !Ref VpcAPublicSubnet2
        RouteTableId: !Ref VpcAPublicSubnetRouteTable

      VpcANatGateway:
      Type: "AWS::EC2::NatGateway"
      "DependsOn":
        - VpcAPublicSubnet1
        - VpcANatEIP
      Properties:
        AllocationId:
          Fn::GetAtt:
        - VpcANatEIP
        -AllocationId
        SubnetId: !Ref VpcAPublicSubnet1
        Tags:
        - Key :Name
         Value: "VPC A NATGW"

      VpcANatInternetRoutePrivate:
        Type:AWS::EC2::Route
        DependsOn:
          - VpcANatGateway
          - VpcAPrivateSubnetRouteTable

      VpcAEc2SecGroup:
        Type:AWS::EC2::SecurityGroup
        DependsOn:VpcA
        Properties:
        GroupDescription: Open-up ports for ICMP
        GroupName:"VPC A Security Group"
        VpcId:!Ref VpcA
        SecurityGroupIngress:
        - IpProtocol:icmp
        CidrIp:0.0.0.0/0\
        FromPort:"-1"
        ToPort:"-1"

        VpcAPublicServerEC2:
          Type:AWS::EC2::Route
          DependsOn:
          -VPCAPrivateSubnetRouteTable
          -VPCAPrivateSubnetRouteTableAssociation
          -VPCAPrivateSubnetRouteTableAssociation2
          -VPCAEc2SecGroup
          Properties:
          InstanceId:
            Ref:"VPCAPublicServerEC2"
          RouteTableId:
           ! Ref:"VPCAPublicSubnetRouteTable"
           SubnetId:!Ref VpcAPublicSubnet2

           VpcAworkerServerEC2:
            Type:AWS::EC2::Route
            DependsOn:
            -VPCAPrivateSubnetRouteTable
            -VPCAPrivateSubnetRouteTableAssociation
            -VPCAPrivateSubnetRouteTableAssociation2
            -VPCAEc2SecGroup
            Properties:
            InstanceId:
              Ref:"VPCAWorkerServerEC2"
            RouteTableId:
             ! Ref:"VPCAPublicSubnetRouteTable"
             SubnetId:!Ref VpcAPublicSubnet2

      VpcAworkloadSubnetsNacl:
        Type:AWS::EC2::NetworkAcl
        DependsOn:VpcA
        Properties:
        VpcId:!Ref VpcA
        Tags: 
        -Key :Name
        Value:"VPC A Workload Subnets NACL"

  VpcAworkloadSubnetsNaclInboundRule:
    Type:AWS::EC2::NetworkAclEntry
    Properties:
    NetworkAclId:!Ref VpcAworkloadSubnetsNacl
    RuleNumber:100
    Protocol:-1
    RuleAction:allow
    CidrBlock:0.0.0.0/0

    VpcAworkloadSubnetsNaclOutboundRule:
    Type:AWS::EC2::NetworkAclEntry
    Properties:
    NetworkAclId:!Ref VpcAworkloadSubnetsNacl
    RuleNumber:100
    Protocol:-1
    RuleAction:allow
    CidrBlock:0.0.0.0/0

    VpcANetworkAssociationPublicSubnet1:
    Type:AWS::EC2::NetworkInterfaceAssociation
    Properties:
    NetworkInterfaceId:!Ref VpcAworkloadSubnetsNacl
    SubnetId:!Ref VpcAPublicSubnetsNacl

  VpcANetworkAssociationPublicSubnet2:
    Type:AWS::EC2::NetworkInterfaceAssociation
    DependsOn:
    - VpcANetworkAssociationPublicSubnet1
    - VpcAworkloadSubnetsNacl
    Properties:
    SubnetId:!Ref VpcAPublicSubnet2
    NetworkAcId:!Ref VpcAworkloadSubnetsNacl
    
    VpcAInternetGateway:
    Type:AWS::EC2::InternetGateway
    Properties:
    Tags:
    -Key :Name
    Value:"VPC A Internet Gateway"

    VpcAInternetGatewayAttachment:
    Type:AWS::EC2::VPCGatewayAttachment
    DependsOn: 
    - VpcAInternetGateway
    RouteTableId:!Ref VpcAPublicSubnetRouteTable

    VpcANatEip:
    Type:"AWS::EC2::EIP"
    Properties:
      Domain:"vpc"

      VpcANatGateway:
      Type:"AWS::EC2::NatGateway"
      DependsOn:
      - VpcANPublicSubnet1 
      - VpcANatEip
   Properties:
   AllocationId:
     Fn::GetAtt:
     - VpcANatEip
     - AllocationId
   SubnetId: !Ref VpcANPublicSubnet1
   Tags:
  - Key :Name
   Value:"VPC A NATGW"

   VpcANatInternetRoutePrivate:
    Type:AWS::EC2::Route
    DependsOn:
    - VpcANatGateway
    - VpcAPrivateSubnetRouteTable
    Properties: 
    DestinationCidrBlock:0.0.0.0/0
    NatGatewayId:!Ref VpcANatGateway
    RouteTableId:!Ref VpcAPrivateSubnetRouteTable
    VpcAEc2SecGroup:
    Type:AWS::EC2::SecurityGroup
    DependsOn:VpcA
    Properties:
    GroupDescription: Open-up ports for ICMP
    GroupName:"VPC A Security Group"
    VpcId:!Ref VpcA
    SecurityGroupIngress:
    - IpProtocol:icmp
    CidrIp:0.0.0.0/0
    FromPort:"-1"
    ToPort:"-1"

    VpcAPublicServerEC2:
    Type:AWS::EC2::Route
    DependsOn:
    -VPCAEc2SecGroup
    -VpcAPublicSubnet2
    Properties:
    IamInstanceProfile:"NetworkingWorkshopInstanceProfile"
    ImageId:!Ref AMI
    InstanceType: t2.micro
    NetworkInterfaceId: 
     - AssociatePublicIpAddress:true 
     DeviceIndex:"0"
     GroupSet: 
     - !Ref VpcAEc2SecGroup
     PrivateIpAddress:10.0.2.100
     SubnetId:!Ref VpcAPublicSubnet2
  Tags: 
      -Key:Name
      Value:"VPC A Public AZ2 Server"

    VpcAInternetGatewayAttachment:
    Type:AWS::EC2::VPCGatewayAttachment
    DependsOn: 
    - VpcA
    - VpcAInternetGateway
  Properties:
  VpcId:!Ref VpcA
  InternetGatewayId:!Ref VpcAInternetGateway

  VpcADirectInternetRoute:
    Type:AWS::EC2::Route
    DependsOn:
    - VpcA
    - VpcAPublicSubnetRouteTable
    Properties:
    DestinationCidrBlock:0.0.0.0/0
    GatewayId:!Ref VpcAInternetGateway
    RouteTableId:!Ref VpcAPublicSubnetRouteTable

  VpcADirectInternetRoute:
    Type:"AWS::EC2::Route"
    Properties:
    Domain:vpc

    DependsOn:
    - VpcANatGateway:
    Type:"AWS::EC2::NatGateway"
    DependsOn:
    - VpcAPublicSubnet1
    - VpcANatEip
    Properties:
      AllocationId:
        Fn::GetAtt:
        - VpcANatEip
        - AllocationId
      SubnetId: !Ref VpcAPublicSubnet1
      Tags:
      - Key:Name
      Value:"VPC A NATGW"

    VpcANatInternetRoute:
    Type:AWS::EC2::Route
    DependsOn:
    - VpcANatGateway
    - VpcAPublicSubnetRouteTable
    Properties:
    DestinationCidrBlock:0.0.0.0/0
    NatGatewayId:!Ref VpcANatGateway
    RouteTableId:!Ref VpcAPrivateSubnetRouteTable

  VpcAEc2SecGroup:
    Type:AWS::EC2::SecurityGroup
    DependsOn:VpcA
    Properties:
    GroupDescription: Open-up ports for ICMP
    GroupName:"VPC A Security Group"
    VpcId:!Ref VpcA
    SecurityGroupIngress:
    - IpProtocol:icmp
    CidrIp:0.0.0.0/0
    FromPort:"-1"
    ToPort:"-1"

    VpcAPublicServerEC2:
    Type:AWS::EC2::Route
    DependsOn:
    -VPCAEc2SecGroup
    -VpcAPublicSubnet2
    Properties:
    IamInstanceProfile:"NetworkingWorkshopInstanceProfile"
    ImageId:!Ref AMI
    InstanceType: t2.micro
    NetworkInterfaceId: 
     - AssociatePublicIpAddress:true 
     DeviceIndex:"0"
     GroupSet: 
     - !Ref VpcAEc2SecGroup
     PrivateIpAddress:10.0.2.100
     SubnetId:!Ref VpcAPublicSubnet2
    Tags:
    -Key :Name
    Value:"VPC A Public AZ2 Server"

  VpcAPrivateServerEc2:
    Type:AWS::EC2::Route
    DependsOn:
    -VPCAEc2SecGroup
    -VpcAPrivateSubnet2
    Properties:
    IamInstanceProfile:"NetworkingWorkshopInstanceProfile"
    ImageId:!Ref AMI
    InstanceType: t2.micro
    NetworkInterfaces:
     - AssociatePublicIpAddress:true 
     DeviceIndex:"0"
     GroupSet: 
     - !Ref VpcAEc2SecGroup
     PrivateIpAddress:10.0.2.100
     SubnetId:!Ref VpcAPrivateSubnet2
    Tags:
    -Key :Name
    Value:"VPC A Private AZ2 Server"

  VpcAPrivate ServerEC2:
    Type:AWS::EC2::Instance
    DependsOn:
    -VPCAEc2SecGroup
    -VpcAPrivateSubnet1
    Properties:
    IamInstanceProfile:"NetworkingWorkshopInstanceProfile"
    ImageId:!Ref AMI
    InstanceType: t2.micro
    PrivateIpAddress:10.0.2.100
    SecurityGroupIds:
    - Ref VpcAEc2SecGroup
    IamInstanceProfile:"NetworkingWorkshopInstanceProfile"
    Tags: 
    - Key:Name
    Value:"VPC A Private AZ1 Server"

  EndpointsS3:
    Type:AWS::EC2::Instance
    DependsOn:VpcAPrivateSubnetRouteTable
    Properties:
    RouteTableIds:
    - Ref VpcAPrivateSubnetRouteTable
    ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
    VpcEndpointType:'Gateway'
    VpcId: !Ref VpcA

    EndpointKMS:
    Type:AWS::EC2::VPCEndpoint
    DependsOn:VpcAPrivateSubnet1
    - VpcAPrivateSubnet2
    Properties:
    PrivateDnsEnabled:True
    ServiceName:!Sub 'com.amazonaws.${AWS::Region}.kms'
    SubnetIds:
    - !Ref VpcAPrivateSubnet1
    - !Ref VpcAPrivateSubnet2
    VpcEndpointType:'Interface'
    VpcId: !Ref VpcA

    IamInstanceProfile:"NetworkingWorkshopInstanceProfile"
    ImageId:!Ref AMI
    InstanceType: t2.micro
    NetworkInterfaceId: 
     - AssociatePublicIpAddress:true 
     DeviceIndex:"0"
     GroupSet: 
     - !Ref VpcAEc2SecGroup
     PrivateIpAddress:10.0.2.100
     SubnetId:!Ref VpcAworkerSubnet2
    Tags:
    -Key :Name
    Value:"VPC A Worker AZ2 Server"

  PublicSubnetRouteTableAssociation:
    Type:AWS::EC2::SubnetRouteTableAssociation
    Properties:
    RouteTableId:!Ref VpcAPublicSubnetRouteTable
    SubnetId:!Ref VpcAPublicSubnet2VCPB

    PrivateSubnet1VCPB:
    Type:AWS::EC2::Subnet 
    DependsOn:
    - VPCB 
   Properties:
   VpcId:
   Ref:VPCB 
   CidrBlock:"10.1.1.0/24"
   AvailabilityZone:
      Ref: AvailabilityZoneA 
   MapPublicIpOnLaunch:false 
   Tags: 
   - Key:Name
   Value: "VPC B private Subnet AZ1"

   PrivateSubnet2VCPB:
    Type:AWS::EC2::Subnet 
    DependsOn:
    - VPCB
   Properties:
   VpcId:
   Ref:VPCB 
   CidrBlock:"10.1.2.0/24"
   AvailabilityZone:
      Ref: AvailabilityZoneB 
   MapPublicIpOnLaunch:false  
   Tags: 
   - Key:Name
   Value: "VPC B private Subnet AZ2"

   PrivateSubnetRouteTableAssociation:
    Type:AWS::EC2::SubnetRouteTableAssociation
    DependsOn:VPCB 
    Properties:
    VpcId:
    Ref : VPCB
    Tags: 
    - Key:Name
    Value: "VPC B private Subnet Route Table"

  PrivateASubnetRouteTableAssociation:
    Type:AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
    - PrivateSubnetRouteTableVPCB
    - PrivateSubnet1VCPB
    Properties:
    RouteTableId:
    !Ref VpcAPrivateSubnetRouteTableVPCB 
    SubnetId:!Ref VpcAPrivateSubnet1VPCB 

  PrivateBSubnetRouteTableAssociation:
    Type:AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
    - PrivateSubnetRouteTableVPCB
    - PrivateSubnet2VCPB
    Properties:
    RouteTableId:
    !Ref VpcAPrivateSubnetRouteTableVPCB 
    SubnetId:!Ref VpcAPrivateSubnet2VCPB

    InternetGatewayVPCB:
    Type:AWS::EC2::InternetGateway
    Properties:
    Tags:
    - Key:Name
    Value:"VPC B  IGW"

  AttachGatewayVPCB:
    Type:AWS::EC2::VPCGatewayAttachment
    DependsOn:
    - InternetGatewayVPCB
    - VPCB
    Properties:
    InternetGatewayId:!Ref InternetGatewayVPCB
    VpcId:!Ref VPCB
